[package]
name = "raytracer"
version = "0.1.0"
authors = ["Luca <lams3@cin.ufpe.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
pbr = "1.0.4"
rand = "0.8.2"
num_cpus = "1.13.0"
scoped_threadpool = "0.1.9"